# PdfParser

./: .gitignore  Cargo.toml
src/: main.rs  pdf_file.rs  temp.rs  util.rs
src/pdf_doc/: doc_tree.rs  page.rs  pdf_doc.rs
src/pdf_doc/layout/: geometry.rs  layout.rs  postscript.pest  postscript.rs
src/pdf_doc/pdf_file/: decode.rs  file_reader.rs  object_cache.rs  pdf_file.rs  predictors.rs  util.rs
src/pdf_doc/pdf_objects/: pdf_objects.rs
src/pdf_file/: decode.rs  mod.rs  pdf_objects.rs  util.rs
