[package]
name = "pdfparser"
version = "0.1.0"
authors = ["Robert Beard <robert.a.beard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.14", features = ["cloudflare_zlib"], default-features = false }
error-chain = "*"
vec-tree = "*"
log = "*"
pretty_env_logger = "*"